mejoras para la inscipcion en base a los formularios en el presenter

--- a/src/app/demo/components/pages/inscription/step1-component.html
+++ b/src/app/demo/components/pages/inscription/step1-component.html
@@ -7,9 +7,10 @@
         <div class="grid p-fluid mt-3">
             <div class="field col-12 md:col-4">
                 <span class="p-float-label">
-                    <p-calendar
+                    <p-calendar 
+                        formControlName="receptionDate"
                         inputId="egressDate"
-                        [formControlName]="presenter.receptionDate"></p-calendar>
+                        ></p-calendar>
                     <label for="egressDate">Fecha de
                         recepción a facultad</label>
                 </span>
@@ -19,7 +20,7 @@
                     <input
                         type="text"
                         id="inputtext"
-                        (formControlName)="presenter.fileNumber"
+                        formControlName="fileNumber"
                         pInputText />
                     <label for="inputtext">Número de expediente</label>
                 </span>
@@ -27,7 +28,7 @@
             <div class="field col-12 md:col-4">
                 <span class="p-float-label">
                     <p-dropdown
-                        (formControlName)="presenter.professionalSchool"
+                        formControlName="professionalSchool"
                         inputId="role"
                         [autoDisplayFirst]="false"
                         [options]="options"
@@ -38,7 +39,8 @@
         </div>
         <div class="flex gap-3 mt-1">
             <p-button (click)="nextStep()" label="Siguiente"
-                icon="pi pi-angle-right" iconPos="right" />
+                icon="pi pi-angle-right" iconPos="right" 
+                [disabled]="presenter.formStep1.invalid"/>
         </div>
     </form>
 
