--- a/src/app/demo/components/pages/inscription/step4-component.html
+++ b/src/app/demo/components/pages/inscription/step4-component.html
@@ -1,70 +1,102 @@
 <div class="card">
     <h5>Float Label</h5>
     <p>
-        All input text components support floating labels by adding
-        (<mark>.p-float-label</mark>) to wrapper class.
+        Complete todos los campos para continuar.
     </p>
-    <div class="grid p-fluid mt-3">
-        <div class="field col-12 md:col-12">
-            <span class="p-float-label">
-                <textarea
-                    inputId="textarea"
-                    rows="4"
-                    cols="30"
-                    pInputTextarea
-                ></textarea>
-                <label for="textarea">Título del proyecto de tesis</label>
-            </span>
+    <p-toast key="tst"></p-toast>
+    <form [formGroup]="presenter.formStep4">
+        <div class="grid p-fluid mt-3">
+            <div class="field col-12 md:col-12">
+                <span class="p-float-label">
+                    <textarea
+                        formControlName="title"
+                        inputId="textarea"
+                        rows="4"
+                        cols="30"
+                        pInputTextarea></textarea>
+                    <label for="textarea">Título del proyecto de tesis</label>
+                </span>
+            </div>
         </div>
-    </div>
-    <div class="grid p-fluid">
-        <div class="field col-12 md:col-4">
-            <span class="p-float-label">
-                <p-calendar
-                    inputId="approvalDate"
-                    formControlName="approvalDate"></p-calendar>
-                <label for="approvalDate">Fecha de
-                    aprobación UDI</label>
-            </span>
+        <div class="grid p-fluid">
+            <div class="field col-12 md:col-4">
+                <span class="p-float-label">
+                    <p-calendar
+                        inputId="approvalDate"
+                        formControlName="approveDate"></p-calendar>
+                    <label for="approvalDate">Fecha de
+                        aprobación UDI</label>
+                </span>
+            </div>
+            <div class="field col-12 md:col-4">
+                <span class="p-float-label">
+                    <input
+                        formControlName="jobNumber"
+                        type="text"
+                        id="jobNumber"
+                        pInputText />
+                    <label for="jobNumber">Número de oficio</label>
+                </span>
+            </div>
+            <div class="field col-12 md:col-4">
+                <span class="p-float-label">
+                    <input
+                        formControlName="resolutionNumber"
+                        type="text"
+                        id="resolutionNumber"
+                        pInputText />
+                    <label for="resolutionNumber">Número de resolución</label>
+                </span>
+            </div>
         </div>
-        <div class="field col-12 md:col-4">
-            <span class="p-float-label">
-                <input
-                type="text"
-                id="jobNumber"
-                pInputText
-            />
-                <label for="jobNumber">Número de oficio</label>
-            </span>
+        <div class="grid p-fluid">
+            <div class="field col-12 md:col-12">
+                <span class="p-float-label">
+                    <textarea
+                        formControlName="comments"
+                        inputId="textarea"
+                        rows="4"
+                        cols="30"
+                        pInputTextarea></textarea>
+                    <label for="textarea">Comentarios u observaciones de la
+                        inscripción</label>
+                </span>
+            </div>
         </div>
-        <div class="field col-12 md:col-4">
-            <span class="p-float-label">
-                <input
-                type="text"
-                id="resolutionNumber"
-                pInputText
-            />
-                <label for="resolutionNumber">Número de resolución</label>
-            </span>
+        <div class="grid p-fluid">
+            <div class="field col-12 md:col-12">
+                 <!-- <p-fileUpload name="demo[]" url="./upload.php" (onUpload)="upload($event)"
+                 (onSelect)="onSelectedFiles($event)" [multiple]="true" accept=".doc,.docx,.pdf,.xls,.xlsx" [maxFileSize]="10000000000">
+                <ng-template pTemplate="content">
+                    <ul *ngIf="uploadedFiles.length">
+                        <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
+                    </ul>
+                </ng-template>
+            </p-fileUpload> -->
+            <p-toast />
+                <p-fileUpload 
+                    name="demo[]" 
+                    url="https://www.primefaces.org/cdn/api/upload.php" 
+                    (onUpload)="upload($event)" 
+                    (onSelect)="onSelectedFiles($event)"
+                    [multiple]="true" 
+                    accept=".doc,.docx,.pdf,.xls,.xlsx" 
+                    maxFileSize="10000000000">
+                        <ng-template pTemplate="content">
+                            <ul *ngIf="presenter.uploadedFiles.length">
+                                <li *ngFor="let file of presenter.uploadedFiles">
+                                    {{ file.name }} - {{ file.size }} bytes
+                                </li>
+                            </ul>
+                        </ng-template>
+                </p-fileUpload>
+            </div>
         </div>
-    </div>
-    <div class="grid p-fluid">
-        <div class="field col-12 md:col-12">
-            <span class="p-float-label">
-                <textarea
-                    inputId="textarea"
-                    rows="4"
-                    cols="30"
-                    pInputTextarea
-                ></textarea>
-                <label for="textarea">Comentarios u observaciones de la inscripción</label>
-            </span>
+        <div class="flex gap-3 mt-1">
+            <p-button (click)="backStep()" label="Regresar" [outlined]="true"
+                icon="pi pi-angle-left" iconPos="left" />
+            <p-button (click)="finalize()" label="Finalizar" icon="pi pi-check"
+                iconPos="right" [disabled]="presenter.formStep4.invalid" />
         </div>
-    </div>
-    <div class="flex gap-3 mt-1">
-        <p-button (click)="backStep()" label="Regresar" [outlined]="true"
-        icon="pi pi-angle-left" iconPos="left" />
-    <p-button (click)="finalize()" label="Finalizar" icon="pi pi-check"
-        iconPos="right" />
-    </div>
+    </form>
 </div>
