--- a/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.html
+++ b/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.html
@@ -1,48 +1,8 @@
+<p-toast key="tst"></p-toast>
 <div *ngIf="!inscriptionSelected" class="grid">
     <div class="col-12">
         <div class="card px-6 py-6">
-            <p-toast></p-toast>
-            <p-toolbar styleClass="mb-4">
-                <ng-template pTemplate="left">
-                    <div class="my-2">
-                        <button
-                            pButton
-                            pRipple
-                            label="Nuevo usuario"
-                            icon="pi pi-plus"
-                            class="p-button-success mr-2"
-                            (click)="openNew()"></button>
-                        <button
-                            pButton
-                            pRipple
-                            label="Eliminar"
-                            icon="pi pi-trash"
-                            class="p-button-danger"
-                            (click)="deleteSelectedProducts()"
-                            [disabled]="
-                                !selectedProducts || !selectedProducts.length
-                            "></button>
-                    </div>
-                </ng-template>
-
-                <ng-template pTemplate="right">
-                    <p-fileupload
-                        mode="basic"
-                        accept="image/*"
-                        [maxFileSize]="1000000"
-                        label="Import"
-                        chooseLabel="Import"
-                        class="mr-2 inline-block"></p-fileupload>
-                    <button
-                        pButton
-                        pRipple
-                        label="Export"
-                        icon="pi pi-upload"
-                        class="p-button-help"
-                        (click)="dt.exportCSV()"></button>
-                </ng-template>
-            </p-toolbar>
-
+            
             <p-table #dt [value]="registros" responsiveLayout="scroll"
                 [rows]="10"
                 [globalFilterFields]="['titulo_proyecto_tesis','nombre']"
@@ -69,10 +29,12 @@
                         <th style="width: 3rem">
                             <p-tableheadercheckbox></p-tableheadercheckbox>
                         </th>
-                        <th pSortableColumn="titulo_proyecto_tesis" style="width:60%">Título de
+                        <th pSortableColumn="titulo_proyecto_tesis"
+                            style="width:60%">Título de
                             tesis <p-sorticon
                                 field="titulo_proyecto_tesis"></p-sorticon></th>
-                        <th pSortableColumn="nombre" style="width:20%">Asesor <p-sorticon
+                        <th pSortableColumn="nombre" style="width:20%">Revisor
+                            <p-sorticon
                                 field="nombre"></p-sorticon></th>
                         <th style="width:10%">Estado</th>
                         <th style="width:10%"></th>
@@ -88,7 +50,7 @@
                             {{data.titulo_proyecto_tesis}}
                         </td>
                         <td style="width:14%; min-width:8rem;">
-                            <span class="p-column-title">Asesor</span>
+                            <span class="p-column-title">Revisor</span>
                             {{data.inscripciones[0].docente[0].nombre + ' ' +
                             data.inscripciones[0].docente[0].apellidos}}
                         </td>
@@ -114,40 +76,216 @@
 
     </div>
 </div>
-
+<p-confirmDialog>
+    <ng-template pTemplate="message" let-message>
+        <div class="flex flex-column align-items-center w-full gap-3 border-bottom-1 surface-border">
+            <i class="pi pi-exclamation-circle text-6xl text-primary-500"></i>
+            <p>{{ message.message }}</p>
+        </div>
+    </ng-template>
+</p-confirmDialog>
 <div *ngIf="inscriptionSelected" class="grid">
     <div class="col-12">
-        <div class="card flex justify-content-center col-12">
-           
-               <h4 class="font-bold">{{inscriptionSelected.titulo_proyecto_tesis}}</h4>
-         
-           
-        </div>
-
-
-        <div class="card ">
-            <div class="row col-12">
-                <div class="col-4"><p>Nro de expediente: {{inscriptionSelected.expediente}}</p></div>
-                <div class="col-4"><p>Escuala profesional: {{inscriptionSelected.escuela_profesional}}</p></div>
-                <div class="col-4"><p>Nro de oficio: {{inscriptionSelected.numero_oficio}}</p></div>
-                <div class="col-4"><p>Nro de resolución: {{inscriptionSelected.numero_resolucion}}</p></div>
-                <div class="col-6">.col-6 .col-md-4</div>
-              </div>
-              
-                <p class="m-0">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Inventore sed consequuntur error repudiandae numquam
-                    deserunt quisquam repellat libero asperiores earum nam
-                    nobis, culpa ratione quam perferendis esse, cupiditate neque
-                    quas!
-                </p>
-          
-                <div class=" col-1flex gap-3 mt-1">
+       
+        <div class="card">
+            <div class="grid d-flex col-12">
+                <div class="mr-auto p-2">
                     <p-button (click)="backList()" label="Regresar"
                         [outlined]="true"
                         icon="pi pi-angle-left" iconPos="left" />
+                    <p-button class="ml-3" (click)="showEdition()"
+                        label="Editar"
+                        icon="pi pi-pencil" iconPos="left" />
                 </div>
+                <div class="p-2">
+                    <p-button *ngIf="inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'"
+                        label="Cancelar inscripción"
+                        [outlined]="true"
+                        class="mr-3"
+                        icon="pi pi-times" iconPos="left"
+                        severity="danger" (click)="goToCancelation()" />
+                    <p-button
+                        *ngIf="inscriptionState === 'Inscrito' || inscriptionState === 'Observado'"
+                        label="Pasar a revisión" [outlined]="true"
+                        icon="pi pi-angle-right" iconPos="right"
+                        severity="info" (click)="goToReview()" />
+                    <p-button *ngIf="inscriptionState === 'En revisión'"
+                        label="Observado" [outlined]="true"
+                        icon="pi pi-exclamation-circle" iconPos="left"
+                        severity="warning" (click)="goToObserved()" />
+                    <p-button
+                        *ngIf="inscriptionState === 'En revisión'"
+                        class="ml-3"
+                        label="Aprobado" [outlined]="true"
+                        icon="pi pi-angle-right" iconPos="right"
+                        severity="success" (click)="goToApprove()" />
+                </div>
+            </div>
+            <div class="card flex justify-content-center col-12">
+
+                <h4
+                    class="font-bold">Título:
+                    {{inscriptionSelected.titulo_proyecto_tesis}}</h4>
+    
+            </div>
+            <div class="grid col-12">
+                <div class="col-3"><p class="font-bold">Nro de
+                        expediente:</p><p>{{inscriptionSelected.expediente}}</p></div>
+                <div class="col-3"><p class="font-bold">Escuala
+                        profesional:</p><p>{{inscriptionSelected.escuela_profesional}}</p></div>
+                <div class="col-3"><p class="font-bold">Nro de
+                        oficio:</p><p>{{inscriptionSelected.numero_oficio}}</p></div>
+                <div class="col-3"><p class="font-bold">Nro de
+                        resolución:</p><p>{{inscriptionSelected.numero_resolucion}}</p></div>
+            </div>
+            <div class="grid col-12">
+                <div class="col-3"><p class="font-bold">Fecha de recepción a
+                        Facultad:</p><p><i class="pi pi-calendar"></i>
+                        {{inscriptionSelected.inscripciones[0].fecha_recepcion_facultad}}</p></div>
+                <div class="col-3"><p class="font-bold">Escuala de aprobación
+                        UDI:</p><p><i class="pi pi-calendar"></i>
+                        {{inscriptionSelected.inscripciones[0].fecha_aprobacion_UDI}}</p></div>
+                <div class="col-3">
+                </div>
+                <div class="col-3">
+                    <p class="font-bold">Estado:</p>
+                    <p-tag *ngIf="inscriptionState === 'Inscrito'"
+                        value="Inscrito" />
+                    <p-tag *ngIf="inscriptionState === 'En revisión'"
+                        severity="info"
+                        value="En revisión" />
+                    <p-tag *ngIf="inscriptionState === 'Observado'"
+                        severity="warning"
+                        value="Observado" />
+                    <p-tag *ngIf="inscriptionState === 'Cancelado'"
+                        severity="danger"
+                        value="Cancelado" />
+                    <p-tag *ngIf="inscriptionState === 'Aprobado'"
+                        severity="success"
+                        value="Aprobado" />
+                </div>
+
+            </div>
+            <div class="grid col-12"
+                style="display: flex; justify-content: center;">
+                <div class="ml-2 mr-2 separator"></div>
+            </div>
+            <div class="grid col-12">
+                <div class="col-6">
+                    <p-table
+                        [value]="inscriptionSelected.inscripciones[0].docente">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th><i class="pi pi-user"></i> Revisor</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-product>
+                            <tr>
+                                <td>{{ product.nombre + ' ' + product.apellidos
+                                    }}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </div>
+                <div class="col-6">
+                    <p-table
+                        [value]="inscriptionSelected.egresados">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th style="width: 50%;"><i
+                                        class="pi pi-users"></i>
+                                    Estudiantes</th>
+                                <th style="width: 50%;"></th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-product>
+                            <tr>
+                                <td>{{ product.nombre + ' ' + product.apellidos
+                                    }}</td>
+                                <td>{{ product.email }}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </div>
+            </div>
+            <div class="ml-2 mr-2 separator"></div>
+            <div class="grid col-12">
+                <div class="grid col-12">
+                    <div class=" col-12">
+                        <h5>Observaciones</h5>
+                    </div>
+                    <div class="col-11">
+                        <span class="p-float-label">
+                            <textarea
+                                inputId="textarea"
+                                rows="4"
+                                style="width: 100%;"
+                                pInputTextarea></textarea>
+                            <label for="textarea">Escribe tu observación
+                                aquí...</label>
+                        </span>
+                    </div>
+                    <div class="col-1">
+                        <p-button label="Enviar" [rounded]="true" />
+                    </div>
+
+                    <div class=" col-12">
+                        <div class="mb-3">
+                            <p-fieldset legend="Gary Velarde"
+                                [toggleable]="true">
+                                <p>
+                                    Lorem ipsum dolor sit amet...Lorem ipsum
+                                    dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...
+                                </p>
+                            </p-fieldset>
+                        </div>
+                        <div class="mb-3">
+                            <p-fieldset legend="Cesar Jauregui"
+                                [toggleable]="true">
+                                <p>
+                                    Lorem ipsum dolor sit amet...Lorem ipsum
+                                    dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...
+                                </p>
+                            </p-fieldset>
+                        </div>
+                        <div class="mb-3">
+                            <p-fieldset legend="Gary Velarde"
+                                [toggleable]="true">
+                                <p>
+                                    Lorem ipsum dolor sit amet...Lorem ipsum
+                                    dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...Lorem ipsum dolor sit
+                                    amet...Lorem ipsum dolor sit amet...Lorem
+                                    ipsum dolor sit amet...
+                                </p>
+                            </p-fieldset>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
-       
+
     </div>
 </div>
