--- a/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.scss
+++ b/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.scss
@@ -9,3 +9,12 @@
 .separator {
     border: 1px solid #dfe7ef; width: 95%;
 }
+
+.task-done {
+    text-decoration: line-through;
+}
+
+.divider-aditional-class {
+    margin-top: -20px; 
+    padding: 0 !important;
+}
